playgrounds/rudy-ts-setup/k8s/basics.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: basics
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: basics
