playgrounds/rudy-ts-setup/k8s/basics.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basics
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
spec:
  rules:
    - http:
        paths:
          - path: /test
            backend:
              serviceName: basics
              servicePort: 80
